Calculator/Grammar/parser/swiftParser.swift
// Generated from swift.g4 by ANTLR 4.9.2
import Antlr4

open class swiftParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = swiftParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(swiftParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, MUL = 1, DIV = 2, ADD = 3, SUB = 4, COMPARE_EQUAL = 5, 
                 COMPARE_NOT_EQUAL = 6, COMPARE_LESS_THAN = 7, COMPARE_LESS_THAN_OR_EQUAL = 8, 
                 COMPARE_GREATER_THAN = 9, COMPARE_GREATER_THAN_OR_EQUAL = 10, 
                 ASSIGNMENT = 11, OPEN_PAREN = 12, CLOSE_PAREN = 13, OPEN_BRACKET = 14, 
                 CLOSE_BRACKET = 15, AND = 16, OR = 17, NOT = 18, COMMA = 19, 
                 PERIOD = 20, TRUE = 21, FALSE = 22, NIL = 23, NUMBER = 24, 
                 STRING = 25, WHITESPACE = 26, IDENTIFIER = 27, DOUBLEQUOTE = 28, 
                 QUESTION = 29, COLON = 30, AMPERSAND = 31
	}

	public
	static let RULE_completeExpression = 0, RULE_statement = 1, RULE_assignmentStatement = 2, 
            RULE_assignmentTarget = 3, RULE_nonQualifiedTarget = 4, RULE_expression = 5, 
            RULE_simpleExpression = 6, RULE_conditionalExpression = 7, RULE_booleanExpression = 8, 
            RULE_booleanTerm = 9, RULE_booleanValue = 10, RULE_booleanSimple = 11, 
            RULE_booleanScalar = 12, RULE_booleanConstant = 13, RULE_comparison = 14, 
            RULE_comparisonOperator = 15, RULE_nonBooleanExpression = 16, 
            RULE_term = 17, RULE_qualExpr = 18, RULE_ptrExpr = 19, RULE_arrayExpr = 20, 
            RULE_constant = 21, RULE_arguments = 22, RULE_simpleId = 23, 
            RULE_fieldName = 24, RULE_functionName = 25, RULE_expressionList = 26, 
            RULE_sliceLowHigh = 27

	public
	static let ruleNames: [String] = [
		"completeExpression", "statement", "assignmentStatement", "assignmentTarget", 
		"nonQualifiedTarget", "expression", "simpleExpression", "conditionalExpression", 
		"booleanExpression", "booleanTerm", "booleanValue", "booleanSimple", "booleanScalar", 
		"booleanConstant", "comparison", "comparisonOperator", "nonBooleanExpression", 
		"term", "qualExpr", "ptrExpr", "arrayExpr", "constant", "arguments", "simpleId", 
		"fieldName", "functionName", "expressionList", "sliceLowHigh"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'<'", "'<='", "'>'", 
		"'>='", "'='", "'('", "')'", "'['", "']'", "'&&'", "'||'", "'!'", "','", 
		"'.'", "'true'", "'false'", "'nil'", nil, nil, nil, nil, "'\"'", "'?'", 
		"':'", "'&'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "MUL", "DIV", "ADD", "SUB", "COMPARE_EQUAL", "COMPARE_NOT_EQUAL", 
		"COMPARE_LESS_THAN", "COMPARE_LESS_THAN_OR_EQUAL", "COMPARE_GREATER_THAN", 
		"COMPARE_GREATER_THAN_OR_EQUAL", "ASSIGNMENT", "OPEN_PAREN", "CLOSE_PAREN", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "AND", "OR", "NOT", "COMMA", "PERIOD", 
		"TRUE", "FALSE", "NIL", "NUMBER", "STRING", "WHITESPACE", "IDENTIFIER", 
		"DOUBLEQUOTE", "QUESTION", "COLON", "AMPERSAND"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "swift.g4" }

	override open
	func getRuleNames() -> [String] { return swiftParser.ruleNames }

	override open
	func getSerializedATN() -> String { return swiftParser._serializedATN }

	override open
	func getATN() -> ATN { return swiftParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return swiftParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,swiftParser._ATN,swiftParser._decisionToDFA, swiftParser._sharedContextCache)
	}


	public class CompleteExpressionContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_completeExpression
		}
	}
	public class CompleteExpression_to_statementContext: CompleteExpressionContext {
			open
			func statement() -> StatementContext? {
				return getRuleContext(StatementContext.self, 0)
			}

		public
		init(_ ctx: CompleteExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterCompleteExpression_to_statement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitCompleteExpression_to_statement(self)
			}
		}
	}
	public class CompleteExpression_to_expressionContext: CompleteExpressionContext {
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}

		public
		init(_ ctx: CompleteExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterCompleteExpression_to_expression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitCompleteExpression_to_expression(self)
			}
		}
	}
	@discardableResult
	 open func completeExpression() throws -> CompleteExpressionContext {
		var _localctx: CompleteExpressionContext = CompleteExpressionContext(_ctx, getState())
		try enterRule(_localctx, 0, swiftParser.RULE_completeExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(58)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,0, _ctx)) {
		 	case 1:
		 		_localctx =  CompleteExpression_to_statementContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(56)
		 		try statement()

		 		break
		 	case 2:
		 		_localctx =  CompleteExpression_to_expressionContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(57)
		 		try expression()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_statement
		}
	}
	public class Statement_to_assignmentStatementContext: StatementContext {
			open
			func assignmentStatement() -> AssignmentStatementContext? {
				return getRuleContext(AssignmentStatementContext.self, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterStatement_to_assignmentStatement(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitStatement_to_assignmentStatement(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext = StatementContext(_ctx, getState())
		try enterRule(_localctx, 2, swiftParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	_localctx =  Statement_to_assignmentStatementContext(_localctx);
		 	try enterOuterAlt(_localctx, 1)
		 	setState(60)
		 	try assignmentStatement()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AssignmentStatementContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_assignmentStatement
		}
	}
	public class AssignmentStatement_to_assignmentTargetContext: AssignmentStatementContext {
			open
			func assignmentTarget() -> AssignmentTargetContext? {
				return getRuleContext(AssignmentTargetContext.self, 0)
			}
			open
			func ASSIGNMENT() -> TerminalNode? {
				return getToken(swiftParser.Tokens.ASSIGNMENT.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}

		public
		init(_ ctx: AssignmentStatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterAssignmentStatement_to_assignmentTarget(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitAssignmentStatement_to_assignmentTarget(self)
			}
		}
	}
	@discardableResult
	 open func assignmentStatement() throws -> AssignmentStatementContext {
		var _localctx: AssignmentStatementContext = AssignmentStatementContext(_ctx, getState())
		try enterRule(_localctx, 4, swiftParser.RULE_assignmentStatement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	_localctx =  AssignmentStatement_to_assignmentTargetContext(_localctx);
		 	try enterOuterAlt(_localctx, 1)
		 	setState(62)
		 	try assignmentTarget(0)
		 	setState(63)
		 	try match(swiftParser.Tokens.ASSIGNMENT.rawValue)
		 	setState(64)
		 	try expression()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class AssignmentTargetContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_assignmentTarget
		}
	}
	public class AssignmentTarget_to_nonQualifiedTargetContext: AssignmentTargetContext {
			open
			func nonQualifiedTarget() -> NonQualifiedTargetContext? {
				return getRuleContext(NonQualifiedTargetContext.self, 0)
			}

		public
		init(_ ctx: AssignmentTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterAssignmentTarget_to_nonQualifiedTarget(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitAssignmentTarget_to_nonQualifiedTarget(self)
			}
		}
	}
	public class AssignmentTarget_to_assignmentTarget_period_fieldNameContext: AssignmentTargetContext {
			open
			func assignmentTarget() -> AssignmentTargetContext? {
				return getRuleContext(AssignmentTargetContext.self, 0)
			}
			open
			func PERIOD() -> TerminalNode? {
				return getToken(swiftParser.Tokens.PERIOD.rawValue, 0)
			}
			open
			func fieldName() -> FieldNameContext? {
				return getRuleContext(FieldNameContext.self, 0)
			}

		public
		init(_ ctx: AssignmentTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterAssignmentTarget_to_assignmentTarget_period_fieldName(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitAssignmentTarget_to_assignmentTarget_period_fieldName(self)
			}
		}
	}

	 public final  func assignmentTarget( ) throws -> AssignmentTargetContext   {
		return try assignmentTarget(0)
	}
	@discardableResult
	private func assignmentTarget(_ _p: Int) throws -> AssignmentTargetContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: AssignmentTargetContext = AssignmentTargetContext(_ctx, _parentState)
		var _prevctx: AssignmentTargetContext = _localctx
		let _startState: Int = 6
		try enterRecursionRule(_localctx, 6, swiftParser.RULE_assignmentTarget, _p)
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			_localctx = AssignmentTarget_to_nonQualifiedTargetContext(_localctx)
			_ctx = _localctx
			_prevctx = _localctx

			setState(67)
			try nonQualifiedTarget(0)

			_ctx!.stop = try _input.LT(-1)
			setState(74)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					_localctx = AssignmentTarget_to_assignmentTarget_period_fieldNameContext(  AssignmentTargetContext(_parentctx, _parentState))
					try pushNewRecursionContext(_localctx, _startState, swiftParser.RULE_assignmentTarget)
					setState(69)
					if (!(precpred(_ctx, 2))) {
					    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 2)"))
					}
					setState(70)
					try match(swiftParser.Tokens.PERIOD.rawValue)
					setState(71)
					try fieldName()

			 
				}
				setState(76)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,1,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}


	public class NonQualifiedTargetContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_nonQualifiedTarget
		}
	}
	public class NonQualifiedTarget_to_slice_exprContext: NonQualifiedTargetContext {
			open
			func nonQualifiedTarget() -> NonQualifiedTargetContext? {
				return getRuleContext(NonQualifiedTargetContext.self, 0)
			}
			open
			func OPEN_BRACKET() -> TerminalNode? {
				return getToken(swiftParser.Tokens.OPEN_BRACKET.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func CLOSE_BRACKET() -> TerminalNode? {
				return getToken(swiftParser.Tokens.CLOSE_BRACKET.rawValue, 0)
			}

		public
		init(_ ctx: NonQualifiedTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterNonQualifiedTarget_to_slice_expr(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitNonQualifiedTarget_to_slice_expr(self)
			}
		}
	}
	public class NonQualifiedTarget_to_target_in_parensContext: NonQualifiedTargetContext {
			open
			func OPEN_PAREN() -> TerminalNode? {
				return getToken(swiftParser.Tokens.OPEN_PAREN.rawValue, 0)
			}
			open
			func assignmentTarget() -> AssignmentTargetContext? {
				return getRuleContext(AssignmentTargetContext.self, 0)
			}
			open
			func CLOSE_PAREN() -> TerminalNode? {
				return getToken(swiftParser.Tokens.CLOSE_PAREN.rawValue, 0)
			}

		public
		init(_ ctx: NonQualifiedTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterNonQualifiedTarget_to_target_in_parens(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitNonQualifiedTarget_to_target_in_parens(self)
			}
		}
	}
	public class NonQualifiedTarget_to_identifierContext: NonQualifiedTargetContext {
			open
			func IDENTIFIER() -> TerminalNode? {
				return getToken(swiftParser.Tokens.IDENTIFIER.rawValue, 0)
			}

		public
		init(_ ctx: NonQualifiedTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterNonQualifiedTarget_to_identifier(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitNonQualifiedTarget_to_identifier(self)
			}
		}
	}
	public class NonQualifiedTarget_to_ptr_exprContext: NonQualifiedTargetContext {
			open
			func MUL() -> TerminalNode? {
				return getToken(swiftParser.Tokens.MUL.rawValue, 0)
			}
			open
			func nonQualifiedTarget() -> NonQualifiedTargetContext? {
				return getRuleContext(NonQualifiedTargetContext.self, 0)
			}

		public
		init(_ ctx: NonQualifiedTargetContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterNonQualifiedTarget_to_ptr_expr(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitNonQualifiedTarget_to_ptr_expr(self)
			}
		}
	}

	 public final  func nonQualifiedTarget( ) throws -> NonQualifiedTargetContext   {
		return try nonQualifiedTarget(0)
	}
	@discardableResult
	private func nonQualifiedTarget(_ _p: Int) throws -> NonQualifiedTargetContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: NonQualifiedTargetContext = NonQualifiedTargetContext(_ctx, _parentState)
		var _prevctx: NonQualifiedTargetContext = _localctx
		let _startState: Int = 8
		try enterRecursionRule(_localctx, 8, swiftParser.RULE_nonQualifiedTarget, _p)
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(85)
			try _errHandler.sync(self)
			switch (swiftParser.Tokens(rawValue: try _input.LA(1))!) {
			case .IDENTIFIER:
				_localctx = NonQualifiedTarget_to_identifierContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx

				setState(78)
				try match(swiftParser.Tokens.IDENTIFIER.rawValue)

				break

			case .MUL:
				_localctx = NonQualifiedTarget_to_ptr_exprContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(79)
				try match(swiftParser.Tokens.MUL.rawValue)
				setState(80)
				try nonQualifiedTarget(2)

				break

			case .OPEN_PAREN:
				_localctx = NonQualifiedTarget_to_target_in_parensContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(81)
				try match(swiftParser.Tokens.OPEN_PAREN.rawValue)
				setState(82)
				try assignmentTarget(0)
				setState(83)
				try match(swiftParser.Tokens.CLOSE_PAREN.rawValue)

				break
			default:
				throw ANTLRException.recognition(e: NoViableAltException(self))
			}
			_ctx!.stop = try _input.LT(-1)
			setState(94)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,3,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					_localctx = NonQualifiedTarget_to_slice_exprContext(  NonQualifiedTargetContext(_parentctx, _parentState))
					try pushNewRecursionContext(_localctx, _startState, swiftParser.RULE_nonQualifiedTarget)
					setState(87)
					if (!(precpred(_ctx, 3))) {
					    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 3)"))
					}
					setState(88)
					try match(swiftParser.Tokens.OPEN_BRACKET.rawValue)
					setState(89)
					try expression()
					setState(90)
					try match(swiftParser.Tokens.CLOSE_BRACKET.rawValue)

			 
				}
				setState(96)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,3,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}

	public class ExpressionContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_expression
		}
	}
	public class Expression_to_conditionalExpressionContext: ExpressionContext {
			open
			func conditionalExpression() -> ConditionalExpressionContext? {
				return getRuleContext(ConditionalExpressionContext.self, 0)
			}

		public
		init(_ ctx: ExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterExpression_to_conditionalExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitExpression_to_conditionalExpression(self)
			}
		}
	}
	public class Expression_to_simpleExpressionContext: ExpressionContext {
			open
			func simpleExpression() -> SimpleExpressionContext? {
				return getRuleContext(SimpleExpressionContext.self, 0)
			}

		public
		init(_ ctx: ExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterExpression_to_simpleExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitExpression_to_simpleExpression(self)
			}
		}
	}
	@discardableResult
	 open func expression() throws -> ExpressionContext {
		var _localctx: ExpressionContext = ExpressionContext(_ctx, getState())
		try enterRule(_localctx, 10, swiftParser.RULE_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(99)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,4, _ctx)) {
		 	case 1:
		 		_localctx =  Expression_to_simpleExpressionContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(97)
		 		try simpleExpression()

		 		break
		 	case 2:
		 		_localctx =  Expression_to_conditionalExpressionContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(98)
		 		try conditionalExpression()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class SimpleExpressionContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return swiftParser.RULE_simpleExpression
		}
	}
	public class SimpleExpression_to_nonBooleanExpressionContext: SimpleExpressionContext {
			open
			func nonBooleanExpression() -> NonBooleanExpressionContext? {
				return getRuleContext(NonBooleanExpressionContext.self, 0)
			}

		public
		init(_ ctx: SimpleExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterSimpleExpression_to_nonBooleanExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitSimpleExpression_to_nonBooleanExpression(self)
			}
		}
	}
	public class SimpleExpression_to_booleanExpressionContext: SimpleExpressionContext {
			open
			func booleanExpression() -> BooleanExpressionContext? {
				return getRuleContext(BooleanExpressionContext.self, 0)
			}

		public
		init(_ ctx: SimpleExpressionContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.enterSimpleExpression_to_booleanExpression(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? swiftListener {
				listener.exitSimpleExpression_to_booleanExpression(self)
			}
		}
	}
	@discardableResult
	 open func simpleExpression() throws -> SimpleExpressionContext {
		var _localctx: SimpleExpressionContext = SimpleExpressionContext(_ctx, getState())
		try enterRule(_localctx, 12, swiftParser.RULE_simpleExpression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(103)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,5, _ctx)) {
		 	case 1:
		 		_localctx =  SimpleExpression_to_booleanExpressionContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(101)
		 		try booleanExpression(0)

		 		break
		 	case 2:
		 		_localctx =  SimpleExpression_to_nonBooleanExpressionContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(102)
		 		try nonBooleanExpression(0)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
